--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OutlAIne</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Outlaine | AI powered outline to text generation</title>
+  <meta name="description"
+    content="Outlaine is a platform that uses artificial intelligence to transform your fast and dirty outlines into polished, professional text. Simply input your outline and let our AI do the rest. By this it helps you to focus on the content of your texts.">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="OutlAIne | AI-Powered Outline to Text Generation">
+  <meta property="og:description"
+    content="Outlaine is a platform that uses artificial intelligence to transform your fast and dirty outlines into polished, professional text. Simply input your outline and let our AI do the rest.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="OutlAIne | AI-Powered Outline to Text Generation">
+  <meta name="twitter:description"
+    content="Outlaine is a platform that uses artificial intelligence to transform your fast and dirty outlines into polished, professional text. Simply input your outline and let our AI do the rest.">
+  <meta name="twitter:image" content="URL of your image">
+  <meta name="keywords"
+    content="Outlaine, Outline, Outlaine.com, Outline2Text, AI, outline to text, text generation, artificial intelligence, text creation">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Outlaine",
+      "description": "Outlaine is a platform that uses artificial intelligence to transform your fast and dirty outlines into polished, professional text.",
+      "url": "https://www.outlaine.com"
+    }
+</script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
