--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta name="twitter:image" content="URL of your image">
   <meta name="keywords"
     content="Outlaine, Outline, Outlaine.com, Outline2Text, AI, outline to text, text generation, artificial intelligence, text creation">
+  <script src="https://accounts.google.com/gsi/client" async></script>
 
   <script type="application/ld+json">
     {
